1998-03-30  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.h: Moved KFileDialog into KFileBaseDialog and made
	KFileDialog and KDirDialog a derived class of KFileBaseDialog to
	make this virtual functions work

Mon Mar 30 17:53:20 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

        * kcombiview.cpp: bug fixes for completion & corresponding
        highlighting

        * kfiledialog.cpp: small bug fix, too much copying into location

        * kfileinfocontents.cpp: completion slightly remodeled, should
        work in all views now

        * kfileinfocontents.h: changed nameList to case insensitive
        list
                    
1998-03-28  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: changed the filter seperator to \n. 
	This looks nicer in the source code of the call

Sat Mar 28 14:49:00 1998  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: changed the meaning of the dirName argument

	* kfiledialog.h: added getShowFilter

Thu Mar 26 12:47:42 1998  Stephan Kulow  <coolo@kde.org>
	
	* kfilesimpleview.cpp: improved scrolling in simple view

	* kfileinfocontents.cpp: add a / after a found dir

	* kfiledialog.cpp: fixed bug for !showFilter

Wed Mar 25 18:39:09 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kfileinfocontents.cpp: completion now working
        
        * kcombiview.cpp: changed behaviour for completion, it
        now highlights completed directory and file                
        
Tue Mar 24 16:08:46 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kfileinfocontents.cpp: sorting now fully working
        
        * kfiledialog.cpp: modifications for sorting in the on the
        fly reconfiguration
        
        * kfileinfocontents.*: modification to the constructor 
        to pass along the sorting
        
        * kfiledetaillist.*: modification to the constructor 
        to pass along the sorting
        
        * kcombiview.*: modification to the constructor 
        to pass along the sorting
